--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav>
         <a id=active href="Home.html">Home</a>
         <a href="Chamber">Chamber</a>
-        <a href="Site-Plan.html">Site Plan</a>
+        <a href="week01/chamber-site-plan.html">Site Plan</a>
         <a href="Form.html">Form</a>
     </nav>
     <main>
