--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Joseph Israel] - WDD 230 - Web Frontend Development</title>
-    <meta name="description" content="WDD 230 - Web Frontend Development - joseph israel - course assignment Portal">
+    <title>Joseph Israel - WDD 230 - Web Frontend Development</title>
+    <meta name="description" content="Joseph Israel WDD 230 - Web Frontend Development course assignment Portal">
     <meta name="author" content="[Joseph Israel]">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
         <a href="Form.html">Form</a>
     </nav>
     <main>
-        <h1>WDD 230: Web Fronted Development</h1>
+        <h1>WDD 230: Web Frontend Development</h1>
 
         <div id="parent">
             <section class="card">
