--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joseph Israel - WDD 230 - Web Frontend Development</title>
-    <meta name="description" content="Joseph Israel WDD 230 - Web Frontend Development course assignment Portal">
-    <meta name="author" content="[Joseph Israel]">
+    <meta name="description" content="Joseph Israel Uchenna WDD 230 - Web Frontend Development course assignment Portal">
+    <meta name="author" content="[Joseph Israel Uchenna]">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lemon&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
