--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abu Dhabi chember of commerce</title>
+    <title>Abu Dhabi chember of commerce site plan</title>
     <meta name="description" content="Abu-Dhabi-Chamber-of-commerce-Site-Plan, supporting members with easy access to trade requirement and smart support"> 
     <meta name="author" content="Abu Dhabi Chambe of Commerce Site plan">
     
@@ -16,10 +16,29 @@
 
 <body>
     <header>
-        <h1>Abu Dhabi Chamber of Commerce Sit Plan</h1>
+        <h1>Abu Dhabi Chamber of Commerce Site Plan</h1>
     </header>
 
     <main>
+        <div class="items">
+            <h3>Site name - Abu Dhabi Chamber of Commerce Site Plan</h3>
+            <p>Abu Dhabi Chamber of Commerce Site Plan</p>
+
+            <h3>purpose</h3>
+            <ul>
+                <li> Providing member with Business Analysis</li>
+                <li> Providing Workshop traing for members</li>
+                <li> Plicy advocate</li>
+
+
+            </ul>
+            <p>Providing members with Business Anylysis</p>
+
+
+        </div>
+
+            <section></section>
+
         <h2>Explor our Wide Range of Service</h2>
         <div class="firstDiv">
             <section>
