week one issues 2

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abu-Dhabi-Chamber-of-commerce-Site-Plan</title>
+    <title>Abu Dhabi Chamber of Commerce 'Site Plan' </title>
     <meta name="description" content="Abu-Dhabi-Chamber-of-commerce-Site-Plan, supporting members with easy access to trade requirement and smart support"> 
     <meta name="author" content="Abu Dhabi Chambe of Commerce Site plan">
     
