--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <title>Abu Dhabi Chamber of Commerce</title>
-  <meta name="descrition" content="This is the Official website of Abu Dhabi chamber of commerce, supporting members with easy access to trade requirements and smart support">
+  <meta name="description" content="This is the Official website of Abu Dhabi chamber of commerce, supporting members with easy access to trade requirements and smart support">
   <meta name="author" content="[Joseph Israel Uchenna]">
 
  
