week03-1st-update

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -199,7 +199,15 @@
  
       </div>
 
+
     </section>
+    <section class="lastfooter">
+      <p class="footerFirstP"> &copy;<span id="year"></span>      
+        <span class="name">Joseph Israel Uchenna | BYU Idaho | WDD230-Fall 2024</span><span id="country">United Arab Emirate</span> <img src="https://www.protocol.dubai.ae/media/89c91dc5-6ca8-4764-ab07-5f953d337ec5/Or90Eg/UAE_Images/flag.jpg" alt="UAE flag" width="50" height="25"> 
+      </p>
+       <p id="lastModified"></p>
+    </section>
+
 
          
   </footer>
