--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
          <button id="menu"></button>
          <ul class="myNav">
            <li><a id="active" href="Home.html">Home</a></li>
-           <li><a href="Chamber">Chamber</a></li>
+           <li><a href="chamber/index.html">Chamber</a></li>
            <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
            <li><a href="Form.html">Form</a></li>
         </ul>
@@ -52,8 +52,8 @@
                 <h2>Learning Activities</h2>
                 <ul>
                 <li>Week 01: <a href="#">Learning</a> | <a href="#">Team Activity</a> | <a href="#">Project</a></li>
-                <li>Week 02: <a href="week02/design.html">Learning Activity - Design</a> | <a href="https://codepen.io/josephiu/pen/eYXgxpe">Design Principle - Hamburger Menu</a> | <a href="#">Project</a></li>
-                <li>Week 03: <a href="#">Learning</a> | <a href="#">Team Activity</a> | <a href="#">Project</a></li>
+                <li>Week 02: <a href="week02/design.html">Design</a> | <a href="https://codepen.io/josephiu/pen/eYXgxpe">Design Principle - Hamburger Menu</a> | <a href="#">Project</a></li>
+                <li>Week 03: <a href="week03/images/landscape.webp">WebP</a> | <a href="week03/lazyload.html">Lazyload</a> | <a href="#">Project</a></li>
                 <li>Week 04: <a href="#">Learning</a> | <a href="#">Team Activity</a> | <a href="#">Project</a></li>
                 <li>Week 06: <a href="#">Learning</a> | <a href="#">Team Activity</a> | <a href="#">Project</a></li>
                          
@@ -70,7 +70,7 @@
     </main>
     <footer>
       <p class="footerFirstP"> &copy;<span id="year"></span>      
-        <span class="name">🎓Joseph Israel Uchenna🎓</span><span id="country">United Arabe Emirate</span> <img src="https://www.protocol.dubai.ae/media/89c91dc5-6ca8-4764-ab07-5f953d337ec5/Or90Eg/UAE_Images/flag.jpg" alt="UAE flag" width="50" height="25"> 
+        <span class="name">🎓Joseph Israel Uchenna🎓</span><span id="country">United Arab Emirate</span> <img src="https://www.protocol.dubai.ae/media/89c91dc5-6ca8-4764-ab07-5f953d337ec5/Or90Eg/UAE_Images/flag.jpg" alt="UAE flag" width="50" height="25"> 
       </p>
        <p id="lastModified"></p>
     </footer>
