--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header> 
         <div class="profileparent">   
             <img src="images/profile-1.webp" alt="An image of Joseph" loading="lazy" width="188" height="266">        
-            <p>Joseph Israel Uchenna</p>
+            <h2>Joseph Israel Uchenna<h2>
         </div>  
     </header>
      
