--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
            <li><a id="active" href="Home.html">Home</a></li>
            <li><a href="chamber/index.html">Chamber</a></li>
            <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
+           <li><a href="discover.html">Discover</a></li>
            <li><a href="Form.html">Form</a></li>
         </ul>
     </nav>
