--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-  <title>Abu Dhabi Chamber of Commerce</title>
-  <meta name="description" content="This is the Official website of Abu Dhabi chamber of commerce, supporting members with easy access to trade requirements and smart support">
+  <title>Abu Dhabi Chamber of Commerce and Discover Page</title>
+  <meta name="description" content="This is the Official Discover page of Abu Dhabi chamber of commerce, supporting members with easy access to trade requirements and smart support">
   <meta name="author" content="[Joseph Israel Uchenna]">
 
  
@@ -60,7 +60,10 @@
   </header>
   
   <main>
-
+    <div class="h1big">
+      <h1>Discover How we have Evolved and Discover our values which our members cherish</h1>
+    </div>
+    
     <div class="major-grid">
       <div class="sidebar">
           <section class="sidebar1">
