--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -61,7 +61,7 @@
   
   <main>
     <div class="h1big">
-      <h1>Discover How we have Evolved and Discover our values which our members cherish</h1>
+      <h1>Chamber of Commerce and Discover </h1>
     </div>
     
     <div class="major-grid">
