--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <li>Week 01: <a href="#">Learning</a> | <a href="#">Team Activity</a> | <a href="#">Project</a></li>
                 <li>Week 02: <a href="week02/design.html">Design</a> | <a href="https://codepen.io/josephiu/pen/eYXgxpe">Hamburger Menu</a> 
                 <li>Week 03: <a href="week03/images/landscape.webp">WebP</a> | <a href="week03/lazyload.html">Lazyload</a> | <a href="week03/responsive-images.html">Responsive Images</a> | <a href="week03/bom.html">BOM</a></li>
-                <li>Week 04: <a href="#">Learning</a> | <a href="#">Team Activity</a> | <a href="#">Project</a></li>
-                <li>Week 06: <a href="#">Learning</a> | <a href="#">Team Activity</a> | <a href="#">Project</a></li>
+                <li>Week 04: <a href="https://codepen.io/blazzard-jason/pen/bGKLQMp">CSS Pseudo-Classes</a> | <a href="week04/csscombinator.html">CSS Combinator</a> | <a href="week04/tablebuild.html">HTML Tables</a> | <a href="week04/form-start/index.html">Form Activity</a></li>
+                <li>Week 05: <a href="#">Learning</a> | <a href="#">Team Activity</a> | <a href="#">Project</a></li>
                          
                 </ul>
             </section>
