--- a/form.html
+++ b/form.html
@@ -53,8 +53,8 @@
             <fieldset>
                 <legend>User Information</legend>
                 <label id="userename">Username* <input type="text" name="username" required></label>
-                <label id="password1">Password* <input type="password" name="password1" pattern="[A-Za-z]{5,}" placeholder="minimum of 6 letters inluding numbers and maximum of 9 letters" required></label>
-                <label id="password2">Re-enter your Password* <input type="password" name="password2" pattern="[A-Za-z]{5,}" required>
+                <label class="password1">Password* <input type="password" name="password1" pattern="[A-Za-z]{5,}" placeholder="minimum of 6 letters inluding numbers and maximum of 9 letters" required></label>
+                <label class="password2">Re-enter your Password* <input type="password" name="password2" required>
                 </label>
                 <p id="passwordMessage"></p>
 
