--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -53,6 +53,8 @@
         <li><a href="Chamber">Discover</a></li>
         <li><a href="Site-Plan.html">Directory</a></li>
         <li><a href="Form.html">join</a><li>
+        <li><a href="join.html">join</a><li>
+
     </ul>
     
     <button id="btn1">Join Us</button>
