--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-  <title>Abu Dhabi Chamber of Commerce</title>
+  <title>Join page for Abu Dhabi Chamber of Commerce</title>
   <meta name="description" content="This is the official Join page of  Abu Dhabi chamber of commerce, supporting members with easy access to trade requirements and smart support">
   <meta name="author" content="[Joseph Israel Uchenna]">
 
