another update on join

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -67,7 +67,9 @@
     </picture>
       
     </div>
-    <button id="btn1" ><a href="join.html">Join Us></button>
+    <a href="join.html">Join
+    <button id="btn1">Join Us></button>
+    </a>
     
   </header>
   
