--- a/chamber/join.html
+++ b/chamber/join.html
@@ -52,7 +52,7 @@
       <li><a href="Home.html">Home</a></li>
       <li><a href="discover.html">Discover</a></li>
       <li><a href="Site-Plan.html">Directory</a></li>
-      <li><a href="Form.html">join</a><li></li>
+      <li><a href="join.html">Join</a><li></li>
       
       
 
