--- a/chamber/index.html
+++ b/chamber/index.html
@@ -67,8 +67,8 @@
     </picture>
       
     </div>
-    <a href="join.html">Join
-    <button id="btn1">Join Us></button>
+    <a href="join.html">
+      <button id="btn1">Join Us></button>
     </a>
     
   </header>
