consuming weather API

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <li>Week 02: <a href="week02/design.html">Design</a> | <a href="https://codepen.io/josephiu/pen/eYXgxpe">Hamburger Menu</a> 
                 <li>Week 03: <a href="week03/images/landscape.webp">WebP</a> | <a href="week03/lazyload.html">Lazyload</a> | <a href="week03/responsive-images.html">Responsive Images</a> | <a href="week03/bom.html">BOM</a></li>
                 <li>Week 04: <a href="https://codepen.io/blazzard-jason/pen/bGKLQMp">CSS Pseudo-Classes</a> | <a href="week04/csscombinator.html">CSS Combinator</a> | <a href="week04/tablebuild.html">HTML Tables</a> | <a href="week04/form-start/index.html">Form Activity</a></li>
-                <li>Week 05: <a href="#">Learning</a> | <a href="#">Team Activity</a> | <a href="#">Project</a></li>
+                <li>Week 05: <a href="https://codepen.io/josephiu/details/YzgRYYz">CSS Psuedo Elements</a> | <a href="week05/new-ward-members.json">Json file</a> | <a href="week05/prophets.html">The Fetch API</a> | <a href="week05/Weather.html">Weather</a></li>
                          
                 </ul>
             </section>
