--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -42,7 +42,7 @@
   
 <body>
   <header>
-   <div id='first-header'>
+   <div id='first-header' class="head"">
     <button class='menu'></button>
     <img src="images/label-e-commerce-logo-vector-30103729.jpg" alt="A picture image of Joseph" width="50" height="50">
       <h2>Abu Dhabi<br>Chamber of Commerce</h2>
@@ -81,10 +81,7 @@
         <button id="list"><i class="material-icons">&#xe8ef;</i></button>          
       </div>
       <!-- will populate this side with cards from javaScript -->
-      <div class="thumbnail"></div>
-
-
-      <div class="cards"></div>
+         <div id="cardz"></div>
       
 
     </section>
