--- a/chamber/index.html
+++ b/chamber/index.html
@@ -51,7 +51,7 @@
     <ul class='menu-inside'>
       <li><a href="Home.html">Home</a></li>
       <li><a href="discover.html">Discover</a></li>
-      <li><a href="Site-Plan.html">Directory</a></li>
+      <li><a href="directory.html">Directory</a></li>
       <li><a href="join.html">Join</a><li></li>
       
       
