--- a/chamber/index.html
+++ b/chamber/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <ul class='menu-inside'>
-      <li><a href="Home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="discover.html">Discover</a></li>
       <li><a href="directory.html">Directory</a></li>
       <li><a href="join.html">Join</a><li></li>
