--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -62,7 +62,7 @@
   
   <main>
     <section id="allSection">
-      <h1>Business Ditectory</h1>
+      <h1>Business Directory</h1>
       <div id="viewMenu">
         <button id="grid"><i class="material-icons">&#xe8f0;</i></button>
         <button id="list"><i class="material-icons">&#xe8ef;</i></button>          
@@ -90,10 +90,9 @@
       <div id="footer2">
         <h3> Follow us</h3>
                     
-        <a class="fa fa-youtube " href="ddddfddfddfd"> Youtube</a>
-        <a class="fa fa-facebook " href="ddddfddfddfd"> facebook</a>
-        <a class="fa fa-instagram " href="ddddfddfddfd"> instagram</a>
- 
+        <a class="fa fa-youtube " href="https://www.youtube.com"> Youtube</a>
+        <a class="fa fa-facebook " href="https://www.facebook.com"> facebook</a>
+        <a class="fa fa-instagram " href="https://www.instagram.com/"> instagram</a>
       </div>
 
 
