--- a/chamber/index.html
+++ b/chamber/index.html
@@ -206,9 +206,9 @@
       <div id="footer2">
         <h3> Follow us</h3>
                     
-        <a class="fa fa-youtube " href="ddddfddfddfd"> Youtube</a>
-        <a class="fa fa-facebook " href="ddddfddfddfd"> facebook</a>
-        <a class="fa fa-instagram " href="ddddfddfddfd"> instagram</a>
+        <a class="fa fa-youtube " href="https://www.youtube.com"> Youtube</a>
+        <a class="fa fa-facebook " href="https://www.facebook.com"> facebook</a>
+        <a class="fa fa-instagram " href="https://www.instagram.com/"> instagram</a>
  
       </div>
 
